# ai_resume_aid

./: README.md  ZHIHU.md
backend/: .env.example  Cargo.toml  Dockerfile  micro-app.example.yml
backend/scripts/: download-font.sh
backend/src/: config.rs  errors.rs  lib.rs  main.rs  models.rs
backend/src/handlers/: config.rs  export_pdf.rs  mod.rs  optimize.rs  search_jobs.rs
backend/src/services/: mod.rs  pdf_generator.rs  pdf_parser.rs  zhihu.rs
docs/: requirement.md
docs/adrs/: 0001-tech-stack.md  0002-no-database.md  0003-printpdf-cjk-font.md
scripts/: api-smoke.sh  subset-font.sh
web/: .env.example  Dockerfile  index.html  micro-app.example.yml  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: App.vue  main.ts
web/src/api/: client.ts
web/src/components/: A11yBar.vue  AppFooter.vue  HeroSection.vue  InputSection.vue  ResultsSection.vue
web/src/styles/: main.css
web/src/types/: index.ts
