[package]
name = "ai_resume_aid"
version = "0.1.0"
edition = "2021"
description = "AI Resume Aid - Public welfare resume optimization tool for disadvantaged groups"

[dependencies]
axum = { version = "0.7", features = ["multipart", "macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tower-http = { version = "0.5", features = ["cors"] }
tower = "0.5"
thiserror = "2"
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
dotenvy = "0.15"
pdf-extract = "0.7"
printpdf = "0.7"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tempfile = "3"
multer = "3"
futures = "0.3"
